--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PhotoFrameActivity"/>
+
+
+        <!-- 가로 화면 가능하도록 옵션 추가-->
+        <activity android:name=".PhotoFrameActivity"
+            android:screenOrientation="landscape"
+            />
     </application>
 
 </manifest>
